<resources>
    <string name="app_name">StoreApp</string>

    <!-- Activity Titles -->
    <string name="title_activity_login">Welcome to the StoreApp</string>

    <!-- Default Strings -->
    <string name="text_default">Default Text</string>
    <string name="product_item_title_price">Price: </string>
    <string name="product_item_price_default">$0.00</string>
    <string name="default_no_news">No recent news.</string>

    <!-- Actions/Buttons -->
    <string name="action_logging_in">Logging you in</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_register">Register</string>
    <string name="action_back">Back</string>
    <string name="action_change_password">Change Password</string>
    <string name="action_change_email">Change Email</string>

    <!-- Prompts -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <!-- Login/Registration Errors -->
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- Top Nav Menu -->
    <string name="title_settings">Settings</string>
    <string name="title_logout">Logout</string>

    <!-- Bottom Nav Menu -->
    <string name="title_home">Home</string>
    <string name="title_products">Products</string>
    <string name="title_cart">Cart</string>
    <string name="title_account">Account</string>

    <!-- Fragments -->
    <string name="home_fragment_text">Welcome, %1$s</string>
    <string name="products_fragment_text">Products Fragment</string>

    <!-- Global Strings -->
    <string name="user_product_count">You currently own: %1d products</string>
    <string name="user_open_ticket_count">You currently have %1d open tickets.</string>

    <!-- Home Strings -->
    <string name="home_recent_news">Recent News:</string>

    <!-- Product Strings -->
    <string name="product_owned_title">Your owned Products: (%1$d  products)</string>
    <string name="product_all_title">All Products: %1$d </string>
    <string name="product_view_all_action">View all products</string>
    <string name="product_name_string">Product Name: %1$s</string>
    <string name="product_price_string">Product Price: %1$s</string>
    <string name="product_description_title">Product Description:</string>

    <!-- Cart Strings -->

    <!-- Account Strings -->
    <string name="account_fragment_title">Your Account</string>
    <string name="account_email_string">Your Email: %1$s</string>
    <string name="account_name">Your Name: %1$s</string>
    <string name="account_details_title">Your Account Details:</string>
    <string name="account_status">Account Status: %1$s</string>

    <!-- Settings Strings -->
    <string name="settings_activity_title">Application Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_cart">CartActivity</string>
    <string name="title_activity_product">ProductActivity</string>

</resources>
