<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProductsFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_margin_size"
        android:layout_marginRight="@dimen/default_margin_size">

        <TextView
            android:id="@+id/product_fragment_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/products_fragment_text"
            android:textColor="@color/colorPrimary"
            android:textSize="32sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/product_all_action_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_fragment_title"
            android:layout_marginTop="@dimen/default_margin_size"
            android:orientation="vertical">

            <TextView
                android:id="@+id/product_all_count"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/products_title_with_count"
                android:textSize="16sp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/view_all_products_button"
                style="@style/ButtonSecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/product_view_all_action" />
        </LinearLayout>

        <TextView
            android:id="@+id/product_fragment_owned_products"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_all_action_container"
            android:layout_marginTop="@dimen/default_margin_size"
            android:text="@string/product_owned_title" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/products_fragment_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_fragment_owned_products"></android.support.v7.widget.RecyclerView>
    </RelativeLayout>

</ScrollView>