<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LandingActivity">

    <!-- Progress Bar Container -->
    <RelativeLayout
        android:id="@+id/progress_container_rl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/progress_bar"
            android:gravity="center"
            android:text="@string/action_logging_in"
            android:textColor="@color/colorOffWhite"
            android:textSize="24sp" />
    </RelativeLayout>
    <!-- End Progress Bar Container -->

    <!-- Landing Container -->
    <RelativeLayout
        android:id="@+id/landing_container_rl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="visible">

        <TextView
            android:id="@+id/no_network_landing"
            style="@style/ErrorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin_size"
            android:gravity="center"
            android:text="@string/has_no_network"
            android:visibility="gone" />

        <TextView
            android:id="@+id/login_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/no_network_landing"
            android:gravity="center"
            android:text="@string/title_activity_login"
            android:textColor="@color/colorOffWhite"
            android:textSize="23sp"
            android:textStyle="bold" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/landing_button_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_title_tv"
            android:layout_centerHorizontal="true">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/show_login_form_btn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in"
                android:textColor="@color/colorOffWhite"
                app:backgroundTint="@color/colorSecondary"
                app:layout_constraintBaseline_toBaselineOf="@+id/show_register_form_btn"
                app:layout_constraintStart_toStartOf="parent" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/show_register_form_btn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_register"
                android:textColor="@color/colorOffWhite"
                app:backgroundTint="@color/colorSecondary"
                app:layout_constraintStart_toEndOf="@+id/show_login_form_btn"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </RelativeLayout>
    <!-- Landing Container -->

    <!-- Login Form -->
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/action_sign_in_short"
                android:textColor="@color/colorOffWhite"
                android:textSize="32sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorOffWhite" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorOffWhite" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/login_action_btn"
                style="@style/ButtonPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/login_back_btn"
                style="@style/ButtonSecondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_back"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
    <!-- End Login Form -->

    <!-- Register Form -->
    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/action_register"
                android:textColor="@color/colorOffWhite"
                android:textSize="32sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorOffWhite" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorOffWhite" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/register_action_btn"
                style="@style/ButtonPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_register" />

            <Button
                android:id="@+id/register_back_btn"
                style="@style/ButtonSecondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_back" />

        </LinearLayout>
    </ScrollView>
    <!-- End Registration Form -->

</RelativeLayout>